Rename xc.cmov, xc.cmovn -> xc.cmov.t, xc.cmov.f
 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/bg-feature.tex
	modified:   docs/specification/spec-instruction.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	renamed:    verif/formal/fml_chk_instr_cmovn.v -> verif/formal/fml_chk_instr_cmov_f.v
	renamed:    verif/formal/fml_chk_instr_cmov.v -> verif/formal/fml_chk_instr_cmov_t.v
	modified:   verif/formal/fml_chk_register_writes_crd.v
	modified:   verif/unit/01-cmov.S

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -8,8 +8,8 @@ Class                 & Syntax                     & Section                    
 \hline\hline                                                                             
 \multirow{12}{*}{1}   & \XCSYNTAXUSE{xc.xcr2gpr}   & \REFSEC{sec:spec:instruction:xc.xcr2gpr}   \\
                       & \XCSYNTAXUSE{xc.gpr2xcr}   & \REFSEC{sec:spec:instruction:xc.gpr2xcr}   \\
-                      & \XCSYNTAXUSE{xc.cmov}      & \REFSEC{sec:spec:instruction:xc.cmov}      \\
-                      & \XCSYNTAXUSE{xc.cmovn}     & \REFSEC{sec:spec:instruction:xc.cmovn}     \\
+                      & \XCSYNTAXUSE{xc.cmov.t}    & \REFSEC{sec:spec:instruction:xc.cmov.t}    \\
+                      & \XCSYNTAXUSE{xc.cmov.f}    & \REFSEC{sec:spec:instruction:xc.cmov.f}    \\
                       & \XCSYNTAXUSE{xc.ld.bu}     & \REFSEC{sec:spec:instruction:xc.ld.bu}     \\
                       & \XCSYNTAXUSE{xc.ld.hu}     & \REFSEC{sec:spec:instruction:xc.ld.hu}     \\
                       & \XCSYNTAXUSE{xc.ld.b}      & \REFSEC{sec:spec:instruction:xc.ld.b}      \\
