--- a/docs/specification/bg-feature.tex
+++ b/docs/specification/bg-feature.tex
@@ -91,7 +91,7 @@ and
 the    co-processor register file (i.e., $\XCR$)
 is included.
 In addition, support 
-(e.g., \VERB[RV]{xc.cmov}; see \REFSEC{sec:spec:instruction:xc.cmov})
+(e.g., \VERB[RV]{xc.cmov.t}; see \REFSEC{sec:spec:instruction:xc.cmov.t})
 for conditional, branch'less moves of content between $\XCR$ registers 
 (cf. x86 \VERB{cmov}~\cite[Page 3-149--3-152]{SCARV:X86:2:18})
 is included; such instructions form a common, vital component
