--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -28,8 +28,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.cmov}{crd, crs1, crs2}{
-  \ienccmov
+\XCINSTR{xc.cmov.t}{crd, crs1, crs2}{
+  \ienccmovt
 }{
   Conditionally move one $\XCR$ register to another.
 }{
@@ -40,8 +40,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.cmovn}{crd, crs1, crs2}{
-  \ienccmov
+\XCINSTR{xc.cmov.f}{crd, crs1, crs2}{
+  \ienccmovf
 }{
   Conditionally move one $\XCR$ register to another.
 }{
