Rename xc.ld.hi, xc.ld.li => xc.ld.hiu, xc.ld.liu
 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/spec-instruction.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	renamed:    verif/formal/fml_chk_instr_ld_hi.v -> verif/formal/fml_chk_instr_ld_hiu.v
	renamed:    verif/formal/fml_chk_instr_ld_li.v -> verif/formal/fml_chk_instr_ld_liu.v
	modified:   verif/formal/fml_chk_register_writes_crd.v
	modified:   verif/unit/02-li.S
	modified:   verif/unit/04-ins-ext.S
	modified:   verif/unit/05-packed-arith-add.S
	modified:   verif/unit/05-packed-arith-mul.S
	modified:   verif/unit/05-packed-arith-sub.S
	modified:   verif/unit/06-packed-shift.S
	modified:   verif/unit/07-packed-shifti.S
	modified:   verif/unit/09-twid.S
	modified:   verif/unit/20-add2-mp.S
	modified:   verif/unit/21-add3-mp.S
	modified:   verif/unit/22-slli-mp.S
	modified:   verif/unit/23-sll-mp.S
	modified:   verif/unit/24-srl-mp.S
	modified:   verif/unit/25-srli-mp.S
	modified:   verif/unit/26-acc2-mp.S
	modified:   verif/unit/27-acc1-mp.S
	modified:   verif/unit/28-sub2-mp.S
	modified:   verif/unit/29-sub3-mp.S
	modified:   verif/unit/30-mac-mp.S
	modified:   verif/unit/31-equ-mp.S
	modified:   verif/unit/32-ltu-mp.S
	modified:   verif/unit/33-gtu-mp.S
	modified:   verif/unit/34-packed-arith-mul-h.S
	modified:   verif/unit/35-packed-arith-clmul-h.S
	modified:   verif/unit/36-packed-arith-clmul-l.S
	modified:   verif/unit/37-mclmul.S
	modified:   verif/unit/38-aes.S

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -70,8 +70,8 @@ Class                 & Syntax                     & Section                    
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
 \hline\hline                                                                             
-\multirow{ 7}{*}{2.3} & \XCSYNTAXUSE{xc.ld.hi}     & \REFSEC{sec:spec:instruction:xc.ld.hi}     \\
-                      & \XCSYNTAXUSE{xc.ld.li}     & \REFSEC{sec:spec:instruction:xc.ld.li}     \\
+\multirow{ 7}{*}{2.3} & \XCSYNTAXUSE{xc.ld.hiu}    & \REFSEC{sec:spec:instruction:xc.ld.hiu}    \\
+                      & \XCSYNTAXUSE{xc.ld.liu}    & \REFSEC{sec:spec:instruction:xc.ld.liu}    \\
                       & \XCSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instruction:xc.bop}       \\
                       & \XCSYNTAXUSE{xc.ext}       & \REFSEC{sec:spec:instruction:xc.ext}       \\
                       & \XCSYNTAXUSE{xc.ins}       & \REFSEC{sec:spec:instruction:xc.ins}       \\
