--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -293,8 +293,8 @@
 \subsubsection{Class-$2.3$: bit-oriented}
 \label{sec:spec:instruction:2:3}
 
-\XCINSTR{xc.ld.li}{crd, imm16}{
-  \iencldli
+\XCINSTR{xc.ld.liu}{crd, imm16}{
+  \iencldliu
 }{
   Load an immediate halfword
   into the lower (or least-significant) halfword of a $\XCR$ register, 
@@ -309,8 +309,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.ld.hi}{crd, imm16}{
-  \iencldhi 
+\XCINSTR{xc.ld.hiu}{crd, imm16}{
+  \iencldhiu 
 }{
   Load an immediate halfword
   into the upper (or  most-significant) halfword of a $\XCR$ register, 
