Rename xc.mmul.1, xc.mclmul.1 => xc.mmul.3, xc.mclmul.3
 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   docs/implementation/verify.tex
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/spec-instruction.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_malu.v
	renamed:    verif/formal/fml_chk_instr_mclmul_1.v -> verif/formal/fml_chk_instr_mclmul_3.v
	renamed:    verif/formal/fml_chk_instr_mmul_1.v -> verif/formal/fml_chk_instr_mmul_3.v
	modified:   verif/formal/fml_chk_register_writes_crdm.v
	modified:   verif/unit/30-mac-mp.S
	modified:   verif/unit/37-mclmul.S

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -1011,8 +1011,8 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.mmul.1}{(crd2, crd1), crs1, crs2, crs3}{
-  \iencmmulone
+\XCINSTR{xc.mmul.3}{(crd2, crd1), crs1, crs2, crs3}{
+  \iencmmulthree
 }{
   Compute a   register-based multi-precision (or ``long'') multiply-accumulate:
   the $32$-bit multiplicands
@@ -1039,8 +1039,8 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.mclmul.1}{(crd2, crd1), crs1, crs2, crs3}{
-  \iencmclmulone
+\XCINSTR{xc.mclmul.3}{(crd2, crd1), crs1, crs2, crs3}{
+  \iencmclmulthree
 }{
   Compute a   register-based multi-precision (or ``long'') multiply-accumulate in $\B{F}_2[\IND]$:
   the $32$-bit multiplicands
