--- a/docs/implementation/integration.tex
+++ b/docs/implementation/integration.tex
@@ -41,21 +41,21 @@ The synthesisable RTL for the example integration is split across three
 directories:
 
 \begin{enumerate}
-\item {\tt \$COP\_HOME/rtl/coprocessor} Contains all of the RTL dedicated
+\item {\tt \$XC\_HOME/rtl/coprocessor} Contains all of the RTL dedicated
     to the \COP.
     This RTL will be required to create other custom integrations.
-\item {\tt \$COP\_HOME/rtl/integration} Contains all of the RTL dedicated
+\item {\tt \$XC\_HOME/rtl/integration} Contains all of the RTL dedicated
     to the integration.
     Principally, it contains the glue logic for the
     sub-system top level, and the PCPI to \COP interface converter.
-\item {\tt \$COP\_HOME/external/picorv32/} Contains the {\tt picorv32.v}
+\item {\tt \$XC\_HOME/external/picorv32/} Contains the {\tt picorv32.v}
     file, which has all of the logic for the PicoRV32 core in it.
 \end{enumerate}
 
 \subsubsection{Integration Testbench}
 
 All files for the integration testbench are found in 
-{\tt \$COP\_HOME/verif/tb}.
+{\tt \$XC\_HOME/verif/tb}.
 
 The {\tt tb\_integration.v} file is the top-level testbench for the 
 subsystem.
@@ -83,7 +83,7 @@ testbench:
 All of these plusargs are automatically filled by the simulation flow
 when running {\tt make}.
 By default, VCD waveforms will be dumped to
-{\tt \$COP\_WORK/icarus/integ-waves.vcd}.
+{\tt \$XC\_WORK/icarus/integ-waves.vcd}.
 This can be overridden by exporting the environment variable
 {\tt RTL\_WAVES} with the desired value.
 
@@ -118,7 +118,7 @@ $> make icarus_run_integ SIM_UNIT_TEST=<path to .hex file>
 Running {\tt make examples} will build a set of example programs which can
 be easily run within the integration testbench.
 
-Note that all tests under {\tt \$COP\_HOME/verif/unit} {\em can} be run
+Note that all tests under {\tt \$XC\_HOME/verif/unit} {\em can} be run
 under the integration testbench, but they will fail out immediately
 as they are designed to be run with the functional verification testbench.
 
@@ -134,23 +134,23 @@ $> make yosys_synth
 
 \noindent
 Will create the netlist and put the result in 
-{\tt \$COP\_HOME/work/scarv\_cop\_top.v}.
+{\tt \$XC\_HOME/work/scarv\_cop\_top.v}.
 
 \noindent
 Extra report files include:
 \begin{itemize}
-\item {\tt \$COP\_HOME/work/yosys-synth.log} - 
+\item {\tt \$XC\_HOME/work/yosys-synth.log} - 
     The log file for the synthesis process.
-\item {\tt \$COP\_HOME/work/synth-statistics.rpt} - 
+\item {\tt \$XC\_HOME/work/synth-statistics.rpt} - 
     The number of yosys internal cells used to represent the design.
     This is useful to work out the relative impact on area of different
     changes, though designers must be mindful this does not represent
     final FPGA utilisation or ASIC cell usage.
-\item {\tt \$COP\_HOME/work/logic-loops.rpt} - 
+\item {\tt \$XC\_HOME/work/logic-loops.rpt} - 
     Contains reports on any logic loops found during the synthesis process.
     These must be removed before synthesis will complete.
 \end{itemize}
 
 \noindent
 The {\tt yosys} script used is very simple, and is found in
-{\tt \$COP\_HOME/flow/yosys/write-verilog.ys}.
+{\tt \$XC\_HOME/flow/yosys/write-verilog.ys}.
