removed in-document changelog

--- a/docs/specification/intro.tex
+++ b/docs/specification/intro.tex
@@ -40,12 +40,12 @@ we defer coverage of related work and detailed design notes to
 \REFAPPX{appx:related}
 and
 \REFAPPX{appx:design}
-respectively.  It follows a semantic versioning\footnote{
+respectively.  The document, and project as a whole, follows a semantic 
+versioning\footnote{
 \url{http://semver.org}
-} (or major/minor/patch) convention, with a summarised changelog\footnote{
+} (or major/minor/patch) convention, with a changelog\footnote{
 \url{http://keepachangelog.com}
-} maintained in
-\REFAPPX{appx:changelog}.
+} maintained within the repository (vs. in the document).
 In line with the current version, the specification should be viewed as an
 initial prototype or draft; statements such as 
 ``\XCID is   X'' 
